--- a/CPP03/ex02/Makefile
+++ b/CPP03/ex02/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: lumaret <lumaret@student.42.fr>            +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/05/15 18:27:27 by lumaret           #+#    #+#              #
+#    Updated: 2025/08/16 14:01:05 by lumaret          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 COMPILER = g++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
